--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
     <servlet>
         <servlet-name>MainServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.MainServlet</servlet-class>
+        <servlet-class>ru.exam.task1.controllers.MainServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
@@ -18,112 +18,11 @@
 
     <servlet>
         <servlet-name>CalculationResultServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.CalculationResultServlet</servlet-class>
+        <servlet-class>ru.exam.task1.controllers.CalculationResultServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CalculationResultServlet</servlet-name>
         <url-pattern>/calculationResult</url-pattern>
     </servlet-mapping>
 
-    <servlet>
-        <servlet-name>RegistrationServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.RegistrationServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RegistrationServlet</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.LoginServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>RegistrationSuccessfulServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.RegistrationSuccessfulServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RegistrationSuccessfulServlet</servlet-name>
-        <url-pattern>/registrationSuccessful</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>LogoutServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.LogoutServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LogoutServlet</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>DeleteUserServlet</servlet-name>
-        <servlet-class>ru.spbu.controllers.DeleteUserServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DeleteUserServlet</servlet-name>
-        <url-pattern>/deleteUser</url-pattern>
-    </servlet-mapping>
-
-    <filter>
-        <filter-name>CalculationRedirectFilter</filter-name>
-        <filter-class>ru.spbu.controllers.filters.CalculationRedirectFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>CalculationRedirectFilter</filter-name>
-        <url-pattern>/calculator.jsp</url-pattern>
-    </filter-mapping>
-
-    <filter>
-        <filter-name>SecurityFilter</filter-name>
-        <filter-class>ru.spbu.controllers.filters.SecurityFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>SecurityFilter</filter-name>
-        <url-pattern>/calculationHistory.jsp</url-pattern>
-        <url-pattern>/calculator.jsp</url-pattern>
-        <url-pattern>/deleteUser.jsp</url-pattern>
-        <url-pattern>/userHomePage.jsp</url-pattern>
-        <url-pattern>/adminUserHomePage.jsp</url-pattern>
-    </filter-mapping>
-
-    <filter>
-        <filter-name>RoleFilter</filter-name>
-        <filter-class>ru.spbu.controllers.filters.RoleFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>RoleFilter</filter-name>
-        <url-pattern>/deleteUser.jsp</url-pattern>
-        <url-pattern>/adminUserHomePage.jsp</url-pattern>
-    </filter-mapping>
-
-    <filter>
-        <filter-name>HomePageRedirectFilter</filter-name>
-        <filter-class>ru.spbu.controllers.filters.HomePageRedirectFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>HomePageRedirectFilter</filter-name>
-        <url-pattern>/userHomePage.jsp</url-pattern>
-    </filter-mapping>
-
-    <filter>
-        <filter-name>MainPageRedirectFilter</filter-name>
-        <filter-class>ru.spbu.controllers.filters.MainPageRedirectFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>MainPageRedirectFilter</filter-name>
-        <url-pattern>/index.jsp</url-pattern>
-        <url-pattern>/login.jsp</url-pattern>
-        <url-pattern>/loginProcess.jsp</url-pattern>
-        <url-pattern>/loginUnsuccessful.jsp</url-pattern>
-        <url-pattern>/register.jsp</url-pattern>
-        <url-pattern>/registrationProcess.jsp</url-pattern>
-        <url-pattern>/registrationSuccessful.jsp</url-pattern>
-        <url-pattern>/registrationUnsuccessful.jsp</url-pattern>
-    </filter-mapping>
 </web-app>
